--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <%== File.read('partials/head.html') %>
+  <%== File.read('templates/partials/head.html') %>
   <link rel="alternate" type="text/markdown" href="index.md">
   <title>João Pinheiro</title>
   <meta name="description" content="Personal homepage of João Pinheiro" />
@@ -15,7 +15,7 @@
   <meta property="profile:username" content="pineman" />
   <meta property="profile:gender" content="male" />
 </head>
-<%== File.read('partials/pinecone.html') %>
+<%== File.read('templates/partials/pinecone.html') %>
 <body>
 <div id="wrap">
 <header id="index-header">
