--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -1,6 +1,6 @@
 <meta charset="UTF-8" />
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="templates/style.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="author" content="João Pinheiro" />
 <meta name="keywords" content="technology computer software engineering" />
