--- a/templates/what-i-read.html.erb
+++ b/templates/what-i-read.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <%== File.read('templates/partials/head.html') %>
-  <%== File.read('templates/partials/article-head.html') %>
+  <%== File.read('templates/head.html') %>
+  <%== File.read('templates/article-head.html') %>
   <link rel="alternate" type="text/markdown" href="posts/what-i-read.md">
   <%
     FILENAME = "posts/what-i-read.md"
