--- a/templates/post.html.erb
+++ b/templates/post.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <%== File.read('templates/partials/head.html') %>
-  <%== File.read('templates/partials/article-head.html') %>
+  <%== File.read('templates/head.html') %>
+  <%== File.read('templates/article-head.html') %>
   <link rel="alternate" type="text/markdown" href="posts/<%= post.filename %>.md">
   <meta property="og:url" content="https://pineman.github.io/<%= post.url %>" />
   <meta property="article:published_time" content="<%= post.date.iso8601 %>" />
