extract site root, nested render_erb

--- a/templates/article-head.html.erb
+++ b/templates/article-head.html.erb
@@ -1,5 +1,5 @@
 <meta property="og:type" content="article" />
-<meta property="article:author" content="https://pineman.github.io" />
+<meta property="article:author" content="<%= SITE_ROOT %>" />
 <meta property="article:section" content="blog" />
 <meta property="article:tag" content="technology" />
 <meta property="article:tag" content="computer" />
