--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -7,7 +7,7 @@
   <meta name="description" content="Personal homepage of João Pinheiro" />
   <meta property="og:description" content="Personal homepage of João Pinheiro" />
   <meta property="og:title" content="João Pinheiro" />
-  <meta property="og:url" content="https://pineman.github.io" />
+  <meta property="og:url" content="<%= SITE_ROOT %>" />
   <meta property="og:type" content="profile" />
   <meta property="og:image" content="assets/me.webp" />
   <meta property="profile:first_name" content="João" />
