--- a/templates/post.html.erb
+++ b/templates/post.html.erb
@@ -2,16 +2,16 @@
 <html lang="en-US">
 <head>
   <%== File.read('templates/head.html') %>
-  <%== File.read('templates/article-head.html') %>
+  <%== render_erb('templates/article-head.html.erb', binding) %>
   <link rel="alternate" type="text/markdown" href="posts/<%= post.filename %>.md">
-  <meta property="og:url" content="https://pineman.github.io/<%= post.url %>" />
+  <meta property="og:url" content="<%= SITE_ROOT %>/<%= post.url %>" />
   <meta property="article:published_time" content="<%= post.date.iso8601 %>" />
   <meta property="article:modified_time" content="<%= post.date.iso8601 %>" />
   <title><%= post.title %></title>
   <meta property="og:title" content="<%= post.title %>" />
   <meta name="description" content="<%= post.text_descr %>" />
   <meta property="og:description" content="<%= post.text_descr %>" />
-  <meta property="og:image" content="https://pineman.github.io/assets/link_previews/<%= post.filename %>.png" />
+  <meta property="og:image" content="<%= SITE_ROOT %>/assets/link_previews/<%= post.filename %>.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:alt" content="<%= post.title %>" />
@@ -20,7 +20,7 @@
   <meta name="twitter:creator" content="@pineman_">
   <meta name="twitter:title" content="<%= post.title %>">
   <meta name="twitter:description" content="<%= post.text_descr %>">
-  <meta name="twitter:image" content="https://pineman.github.io/assets/link_previews/<%= post.filename %>.png">
+  <meta name="twitter:image" content="<%= SITE_ROOT %>/assets/link_previews/<%= post.filename %>.png">
   <meta name="twitter:image:alt" content="<%= post.title %>">
 </head>
 <body>
