--- a/templates/links.html.erb
+++ b/templates/links.html.erb
@@ -3,16 +3,16 @@
 <head>
   <%== File.read('templates/head.html') %>
   <%== render_erb('templates/article-head.html.erb', binding) %>
-  <link rel="alternate" type="text/markdown" href="posts/what-i-read.md">
+  <link rel="alternate" type="text/markdown" href="posts/links.md">
   <%
-    FILENAME = "posts/what-i-read.md"
+    FILENAME = "posts/links.md"
     content = File.read(FILENAME)
     if content.include?("?utm_source=substack&utm_medium=email")
       File.write(FILENAME, content.gsub(/\?utm_source=substack&utm_medium=email/, ""))
     end
     file = File.new(FILENAME)
   %>
-  <meta property="og:url" content="<%= SITE_ROOT %>/what-i-read.html" />
+  <meta property="og:url" content="<%= SITE_ROOT %>/links.html" />
   <meta property="article:published_time" content="<%= file.mtime.iso8601 %>" />
   <meta property="article:modified_time" content="<%= file.mtime.iso8601 %>" />
   <title>What I read</title>
