--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -1,7 +1,8 @@
+<% root = "" %>
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <%== File.read('templates/head.html') %>
+  <%== render_erb('templates/head.html.erb', binding) %>
   <link rel="alternate" type="text/markdown" href="index.md">
   <title>João Pinheiro</title>
   <meta name="description" content="Personal homepage of João Pinheiro" />
@@ -73,6 +74,7 @@
     <% end %>
   </ul>
   <h2><a href="links.html"><div class="icon-container"><i class="fa-solid fa-link"></i></div>Links</a></h2>
+  <h2><a href="notes.html"><div class="icon-container"><i class="fa-solid fa-note-sticky"></i></div>Notes</a></h2>
   <details style="margin-top: -0.5em;">
     <summary><h2 style="display: inline-block;"><div class="icon-container" style="margin-top: -4px; margin-left: 6px;"><i class="fa-solid fa-layer-group"></i></div>Projects</h2></summary>
     <ul style="margin-top: 0;">
