--- a/templates/head.html.erb
+++ b/templates/head.html.erb
@@ -1,6 +1,6 @@
 <meta charset="UTF-8" />
-<link rel="icon" type="image/x-icon" href="<%= root %>favicon.ico" />
-<link rel="stylesheet" href="<%= root %>templates/style.css" />
+<link rel="icon" type="image/x-icon" href="<%= site_link("favicon.ico") %>" />
+<link rel="stylesheet" href="<%= site_link("templates/style.css") %>" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="author" content="João Pinheiro" />
 <meta name="keywords" content="technology computer software engineering" />
