--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -1,9 +1,9 @@
-<% root = "" %>
+<% @root = "" %>
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
   <%== render_erb('templates/head.html.erb', binding) %>
-  <link rel="alternate" type="text/markdown" href="index.md">
+  <link rel="alternate" type="text/markdown" href="<%= site_link("index.md") %>">
   <title>João Pinheiro</title>
   <meta name="description" content="Personal homepage of João Pinheiro" />
   <meta property="og:description" content="Personal homepage of João Pinheiro" />
@@ -39,7 +39,7 @@
         <div class="icon-container">
           <i class="fa-solid fa-file-lines"></i>
         </div>
-        CV: <a href="cv/cv.pdf" target="_blank">PDF</a> or <a href="cv/index.html" target="_blank">HTML</a>
+        CV: <a href="<%= site_link("cv/cv.pdf") %>" target="_blank">PDF</a> or <a href="<%= site_link("cv/index.html") %>" target="_blank">HTML</a>
       </li>
       <li>
         <div class="icon-container">
@@ -64,7 +64,7 @@
 </header>
 <article>
   <p>Hi! My name is João Pinheiro (aka pineman), I'm from Lisbon, Portugal and I like computers. I started programming when I was <span title="<%= Helpers.years_ago("2014-02-01") %> years ago">16</span> with Python and I've loved software ever since. Currently at <a href="https://www.amplemarket.com/">amplemarket</a>!</p>
-  <h2><a href="atom.xml"><div class="icon-container"><i class="fa-solid fa-square-rss"></i></div>Blog</a></h2>
+  <h2><a href="<%= site_link("atom.xml") %>"><div class="icon-container"><i class="fa-solid fa-square-rss"></i></div>Blog</a></h2>
   <ul>
     <% posts.sort_by(&:date).reverse.each do |post| %>
       <li>
@@ -73,8 +73,8 @@
       </li>
     <% end %>
   </ul>
-  <h2><a href="links.html"><div class="icon-container"><i class="fa-solid fa-link"></i></div>Links</a></h2>
-  <h2><a href="notes.html"><div class="icon-container"><i class="fa-solid fa-note-sticky"></i></div>Notes</a></h2>
+  <h2><a href="<%= site_link("links.html") %>"><div class="icon-container"><i class="fa-solid fa-link"></i></div>Links</a></h2>
+  <h2><a href="<%= site_link("notes.html") %>"><div class="icon-container"><i class="fa-solid fa-note-sticky"></i></div>Notes</a></h2>
   <details style="margin-top: -0.5em;">
     <summary><h2 style="display: inline-block;"><div class="icon-container" style="margin-top: -4px; margin-left: 6px;"><i class="fa-solid fa-layer-group"></i></div>Projects</h2></summary>
     <ul style="margin-top: 0;">
