--- a/templates/links.html.erb
+++ b/templates/links.html.erb
@@ -1,17 +1,16 @@
-<% root = "" %>
+<% @root = "" %>
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
   <%== render_erb('templates/head.html.erb', binding) %>
   <%== render_erb('templates/article-head.html.erb', binding) %>
-  <link rel="alternate" type="text/markdown" href="posts/links.md">
+  <link rel="alternate" type="text/markdown" href="<%= site_link(LINKS_MD) %>">
   <%
-    FILENAME = "posts/links.md"
-    content = File.read(FILENAME)
+    content = File.read(LINKS_MD)
     if content.include?("?utm_source=substack&utm_medium=email")
-      File.write(FILENAME, content.gsub(/\?utm_source=substack&utm_medium=email/, ""))
+      File.write(LINKS_MD, content.gsub(/\?utm_source=substack&utm_medium=email/, ""))
     end
-    file = File.new(FILENAME)
+    file = File.new(LINKS_MD)
   %>
   <meta property="og:url" content="<%= SITE_ROOT %>/links.html" />
   <meta property="article:published_time" content="<%= file.mtime.iso8601 %>" />
@@ -23,7 +22,7 @@
 </head>
 <body>
 <div id="wrap">
-<a href="index.html">&lt; back</a>
+<a href="<%= site_link("index.html") %>">&lt; back</a>
 <article>
   <h1>Some of what I read on the internets</h1>
   <div class="icon-container">
@@ -45,7 +44,7 @@
   <% end %>
 <% end %>
 </article>
-<a href="index.html">&lt; back</a>
+<a href="<%= site_link("index.html") %>">&lt; back</a>
 </div>
 </body>
 </html>
