--- a/templates/notes.html.erb
+++ b/templates/notes.html.erb
@@ -1,4 +1,4 @@
-<% root = "" %>
+<% @root = "" %>
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="wrap">
-<a href="index.html">&lt; back</a>
+<a href="<%= site_link("index.html") %>">&lt; back</a>
 <article>
   <h1>Notes</h1>
   <ul>
@@ -21,7 +21,7 @@
 <% end %>
   </ul>
 </article>
-<a href="index.html">&lt; back</a>
+<a href="<%= site_link("index.html") %>">&lt; back</a>
 </div>
 </body>
 </html>
